home page fixes

--- a/src/iatoolkit/static/styles/landing_page.css
+++ b/src/iatoolkit/static/styles/landing_page.css
@@ -79,6 +79,10 @@ body {
     border-color: var(--website-primary-color-dark);
 }
 
+.bg-light h3 {
+    color: var(--website-primary-color);
+}
+
 /* --- Sección de Características (Features) --- */
 .features-section {
     padding: 5rem 0;
