--- a/src/iatoolkit/templates/index.html
+++ b/src/iatoolkit/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}IAToolkit{% endblock %}
+{% block title %}IAToolkit - Framework de IA{% endblock %}
 
 {% block styles %}
     {# Enlazamos la hoja de estilos del website y los iconos de Bootstrap #}
