--- a/companies/sample_company/templates/home.html
+++ b/companies/sample_company/templates/home.html
@@ -18,15 +18,32 @@
         <div class="col-lg-7">
             <h1 class="home-title">Bienvenido a la inteligencia de {{ branding.name }}</h1>
             <p class="lead ">
-                Este asistente esta entrenado con los datos de una empresa ficticia llamada Sample Company.
-                Es una empresa clasica que vende productos en distintos paises, y
-                puedes preguntarle sobre la siguiente información:
+                Este asistente esta entrenado con los datos de una empresa ficticia llamada
+                <span class="text-brand-primary"> Sample Company</span>,
+                una empresa comercializadora de productos en diversos paises.
+                Puedes preguntarle sobre una variedad de temas, como:
             </p>
             <ul class="list-unstyled mt-4 fs-5 fw-normal">
-                <li class="mb-2"><i class="bi bi-check-circle-fill me-2"></i>Ventas, despachos y comisiones.</li>
-                <li class="mb-2"><i class="bi bi-check-circle-fill me-2"></i>Sobre sus proveedores y despachos.</li>
-                <li class="mb-2"><i class="bi bi-check-circle-fill me-2"></i>Averigua sobre  los empleados de Sample.</li>
-                <li class="mb-2"><i class="bi bi-check-circle-fill me-2"></i>Puedes pedirle que agrupe datos por paises, territorios, etc.</li>
+                <li class="mb-3">
+                    <i class="bi bi-check-circle-fill me-2 text-brand-primary"></i>
+                    <strong>Consultas sobre ventas</strong>
+                    <span class="list-example">"¿Cuál fue el total de ventas en Alemania el primer trimestre del 2025?"</span>
+                </li>
+                <li class="mb-3">
+                    <i class="bi bi-check-circle-fill me-2 text-brand-primary"></i>
+                    <strong>Información de proveedores</strong>
+                    <span class="list-example">"Muéstrame los últimos 3 despachos del proveedor 'Atlantic Seafood BV '."</span>
+                </li>
+                <li class="mb-3">
+                    <i class="bi bi-check-circle-fill me-2 text-brand-primary"></i>
+                    <strong>Resúmenes y agrupaciones</strong>
+                    <span class="list-example">"Genera una tabla con el resumen de ventas por país para el año 2025: nùmero de ordenes y monto"</span>
+                </li>
+                <li class="mb-3">
+                    <i class="bi bi-check-circle-fill me-2 text-brand-primary"></i>
+                    <strong>Datos de empleados</strong>
+                    <span class="list-example">"¿Cuántos empleados trabajan en canada?"</span>
+                </li>
             </ul>
         </div>
 
