--- a/src/iatoolkit/templates/chat.html
+++ b/src/iatoolkit/templates/chat.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block main_class %}chat-layout-container container{% endblock %}
 
 {% block title %}{{ branding.name }} IA{% endblock %}
 
