--- a/src/iatoolkit/templates/base.html
+++ b/src/iatoolkit/templates/base.html
@@ -16,12 +16,10 @@
 
     {% block styles %}{% endblock %}
 </head>
-<body class="d-flex flex-column p-3" style="min-height: 100vh;">
-
-    <main class="d-flex flex-column flex-grow-1">
+<body>
+    <main class="{% block main_class %}{% endblock %}">
         {% block content %}{% endblock %}
     </main>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
